--- a/docs/main.css
+++ b/docs/main.css
@@ -19,10 +19,13 @@
     width: 100%;
 }
 
+.markdown-section blockquote{
+    margin: 0;
+}
+
 blockquote{
     --theme-color: #a8b4ae;
     transition: 0.3s;
-    margin-top: -10px;
 }
 
 blockquote:hover{
