--- a/docs/main.css
+++ b/docs/main.css
@@ -5,7 +5,11 @@
 }
 
 .markdown-section tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #f9f9f9;
+}
+
+.markdown-section tr:nth-child(odd) {
+    background-color: #f4f4f4;
 }
 
 .markdown-section th{
