--- a/docs/main.css
+++ b/docs/main.css
@@ -1,16 +1,29 @@
 .markdown-section td{
-    border: none;
+    border: none!important;
     color: black;
     padding: 8px;
 }
 
-.markdown-section tr:nth-child(even) {
+.markdown-section tr{
+    border: none!important;
+}
+
+.markdown-section tr:nth-child(odd) {
     background-color: #f9f9f9;
+}
+
+.markdown-section tr:nth-child(even) {
+    background-color: #f4f4f4;
+}
+
+.markdown-section table{
+    border-color: 1px solid #e2e2e2!important;
 }
 
 .markdown-section th{
     padding: 25px!important;
     font-family: Alata!important;
+    border: none!important;
     background-color: #1DB954;
     color: white;
 }
