--- a/docs/main.css
+++ b/docs/main.css
@@ -13,7 +13,7 @@
 }
 
 .markdown-section tr:nth-child(even) {
-    background-color: #f4f4f4;
+    background-color: #f4f4f4!important;
 }
 
 .markdown-section table{
