--- a/docs/main.css
+++ b/docs/main.css
@@ -87,5 +87,5 @@ blockquote:hover{
 }
 
 section.cover.show{
-    background-color: var(--theme-color)!important;
+    background: var(--theme-color)!important;
 }
