--- a/docs/main.css
+++ b/docs/main.css
@@ -98,4 +98,6 @@ blockquote:hover{
     border-radius: 2px;
     margin-top: 10px;
     width: 30%!important;
+    text-align: center!important;
+    font-family: consolas;
 }
