--- a/docs/main.css
+++ b/docs/main.css
@@ -120,7 +120,6 @@ section.cover .cover-main > p a{
     text-align: center;
     vertical-align: center;
     display: none;
-    width: 10px;
-    height: 10px;
+    padding: 10px;
     font-weight: bold;
 }
